HelloUltraviolet/Fixtures/RejectedSource/Keys/SharedDynamicMutatingReceiver/Expected.uv
//! Expected diagnostic metadata for the SharedDynamicMutatingReceiver rejected-source specimen.

expectedDiagnostic("E-CON-0083", "requirement.19.SharedDynamicClassRejectsMutatingReceivers")
